tests/fixtures/invalid/pow_int_bool_bytes.py
# Cannot call pow() with Int, Bool, Bytes
x = pow(1, True, b"hello")
